--- a/app/views/invites/_stats.html.erb
+++ b/app/views/invites/_stats.html.erb
@@ -1,4 +1,5 @@
 <% remaining = [0, available_invites_count - created_invites_count].max %>
-<div class="alert alert-<%= remaining > 0 ? 'info' : 'secondary' %>">
-  <strong>Available invites:</strong> <%= remaining %>
+<div class="<%= class_names('ff-alert', remaining.positive? ? 'ff-alert--info' : 'ff-alert--warning') %>">
+  <span class="font-semibold">Available invites:</span>
+  <span class="ml-1"><%= remaining %></span>
 </div>
