--- a/app/views/invites/index.html.erb
+++ b/app/views/invites/index.html.erb
@@ -1,25 +1,27 @@
-<div class="row">
-  <div class="col-12">
-    <%= page_header "Invites" do %>
-      <div id="create-invite-button">
-        <%= render "create_button", can_create: policy(Invite).create? %>
-      </div>
-    <% end %>
+<% content_for :title, "Invites" %>
 
-    <div id="invite-stats" class="mb-4">
-      <%= render "stats", **@invite_stats %>
+<div class="space-y-8">
+  <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
+    <h1 class="ff-h1">Invites</h1>
+    <div id="create-invite-button">
+      <%= render "create_button", can_create: policy(Invite).create? %>
     </div>
-
-    <div id="invites-table" class="mb-2">
-      <%= render "table", invites: @invites %>
-    </div>
-
-    <% if @invite_stats[:invited_users_count] %>
-      <div class="list-group">
-        <div class="list-group-item">
-          <strong>Invited users:</strong> <%= @invite_stats[:invited_users_count] %>
-        </div>
-      </div>
-    <% end %>
   </div>
+
+  <div id="invite-stats">
+    <%= render "stats", **@invite_stats %>
+  </div>
+
+  <div id="invites-table">
+    <%= render "table", invites: @invites %>
+  </div>
+
+  <% if @invite_stats[:invited_users_count] %>
+    <div class="ff-card">
+      <div class="ff-card__body">
+        <span class="ff-text text-sm font-semibold text-slate-700">Invited users:</span>
+        <span class="ff-text text-sm text-slate-600"><%= @invite_stats[:invited_users_count] %></span>
+      </div>
+    </div>
+  <% end %>
 </div>
