--- a/app/views/settings/access_tokens/edit.html.erb
+++ b/app/views/settings/access_tokens/edit.html.erb
@@ -1,14 +1,14 @@
-<div class="d-flex justify-content-between align-items-center mb-4">
-  <h1>Edit Token</h1>
-  <%= link_to "← Back to Access Tokens", settings_access_tokens_path, class: "btn btn-outline-secondary" %>
-</div>
+<% content_for :title, "Edit Token" %>
 
-<div class="row">
-  <div class="col-lg-6">
-    <div class="alert alert-warning">
-      There are N feed using this token.
-      List feed names
-      Make sure the new token have access to each group on this list. Otherwise feeds will remain inactive.
+<div class="space-y-8">
+  <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
+    <h1 class="ff-h1">Edit Token</h1>
+    <%= link_to "Back to Access Tokens", settings_access_tokens_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
+  </div>
+
+  <div class="max-w-3xl space-y-6">
+    <div class="ff-alert ff-alert--warning">
+      Make sure the updated token has access to every group used by your feeds. Otherwise those feeds will remain inactive.
     </div>
 
     <%= render "form",
