--- a/app/views/settings/access_tokens/new.html.erb
+++ b/app/views/settings/access_tokens/new.html.erb
@@ -1,10 +1,12 @@
-<div class="d-flex justify-content-between align-items-center mb-4">
-  <h1>Create New Token</h1>
-  <%= link_to "← Back to Access Tokens", settings_access_tokens_path, class: "btn btn-outline-secondary" %>
-</div>
+<% content_for :title, "Create New Token" %>
 
-<div class="row">
-  <div class="col-lg-6">
+<div class="space-y-8">
+  <div class="flex flex-col gap-3 sm:flex-row sm:items-start sm:justify-between">
+    <h1 class="ff-h1">Create New Token</h1>
+    <%= link_to "Back to Access Tokens", settings_access_tokens_path, class: class_names("ff-button", "ff-button--secondary", "ff-button--compact") %>
+  </div>
+
+  <div class="max-w-3xl">
     <%= render "form",
                access_token: @access_token,
                token_label: "FreeFeed Access Token",
