--- a/app/views/invites/_summary.html.erb
+++ b/app/views/invites/_summary.html.erb
@@ -1,6 +1,5 @@
-<%# locals: (available_invites_count:, created_invites_count:, invited_users_count:, unused_invites_count:) %>
-<% remaining = [0, available_invites_count - created_invites_count].max %>
-<p class="ff-text">
-  You can send <strong><%= remaining %></strong> more invites.
+<%# locals: (remaining_invites_count:, invited_users_count:, unused_invites_count:) %>
+<p class="ff-text text-sm text-slate-600">
+  You can send <strong><%= remaining_invites_count %></strong> more invites.
   <%= pluralize(invited_users_count, "user") %> has joined so far.
 </p>
