Use default font size

--- a/app/views/invites/_summary.html.erb
+++ b/app/views/invites/_summary.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (remaining_invites_count:, invited_users_count:, unused_invites_count:) %>
-<p class="ff-text text-sm text-slate-600">
+<p class="ff-text text-slate-600">
   You can send <strong><%= remaining_invites_count %></strong> more invites.
   <%= pluralize(invited_users_count, "user") %> has joined so far.
 </p>
