--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -20,7 +20,7 @@
 
   <% if @access_tokens.any? %>
     <div class="ff-table-container">
-      <table class="ff-table">
+      <table class="ff-table" data-key="settings.access_tokens.table">
         <thead>
           <tr>
             <th scope="col">Name</th>
