Remove the explicit empty value on the email field

--- a/app/views/admin/email_updates/edit.html.erb
+++ b/app/views/admin/email_updates/edit.html.erb
@@ -22,7 +22,7 @@
 
           <div class="ff-form-group">
             <%= form.label :email_address, "New Email", class: "ff-form-label" %>
-            <%= form.email_field :email_address, value: "", class: "ff-form-input", required: true, autofocus: true %>
+            <%= form.email_field :email_address, class: "ff-form-input", required: true, autofocus: true %>
           </div>
 
           <div class="ff-form-group">
