--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -88,11 +88,11 @@
   }
 
   .ff-nav-brand {
-    @apply inline-flex items-center text-xl font-semibold text-slate-900;
+    @apply inline-flex items-center text-lg font-semibold text-slate-900;
   }
 
   .ff-nav-link {
-    @apply inline-flex items-center rounded-sm px-3 py-2 text-lg transition hover:bg-slate-100 md:px-2 md:py-1 md:hover:bg-transparent md:hover:text-slate-900;
+    @apply inline-flex items-center rounded-sm px-3 py-2 transition hover:bg-slate-100 md:px-2 md:py-1 md:hover:bg-transparent md:hover:text-slate-900;
   }
 
   .ff-nav-link--active {
