--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
     </button>
 
     <div class="hidden w-full md:block md:w-auto" id="primary-navigation">
-      <ul class="mt-4 flex flex-col gap-1 rounded-lg border border-slate-200 bg-white p-4 text-lg font-medium text-slate-600 md:mt-0 md:flex-row md:items-center md:space-x-4 md:border-0 md:bg-transparent md:p-0">
+      <ul class="mt-4 flex flex-col gap-1 rounded-lg border border-slate-200 bg-white p-4 font-medium text-slate-600 md:mt-0 md:flex-row md:items-center md:space-x-4 md:border-0 md:bg-transparent md:p-0">
         <% navbar_items.each do |item| %>
           <% link_classes = class_names(
             "ff-nav-link",
